# Pet_predict_salary_streamlit

./: Dockerfile  SalaryPred.ipynb  app.py  explore_page.py  predict_page.py  pyproject.toml  readme.txt
.ipynb_checkpoints/: SalaryPred-checkpoint.ipynb
