[tool.poetry]
name = "mlsp"
version = "0.1.0"
description = ""
authors = ["s"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
streamlit = "^1.32.2"
matplotlib = "^3.1.1"
numpy = "^1.19.5"
pandas = "^1.4.1"
scikit-learn = "1.2.2"
ipython = "^8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
